Added JS, other notes content

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,3 +40,12 @@ p {
     border: 5px solid gray;
     box-shadow: 5px 10px #888;
   }
+
+  .description {
+    color: hsl(240, 80%, 60% );
+    font-style: italic;
+  }
+
+  .example {
+    color: hsl(240, 0%, 50% );
+  }
