--- a/assets/style.css
+++ b/assets/style.css
@@ -29,10 +29,10 @@ ul {
     font-size: 20px;
 }
 
-p {
-    text-align: center;
-    font-size: 30px;
-  }
+footer p {
+  text-align: center;
+  font-size: 30px;
+}
 
   .card {
     width: 80%;
@@ -48,4 +48,8 @@ p {
 
   .example {
     color: hsl(240, 0%, 50% );
+  }
+
+  .italic {
+    font-style: italic;
   }
