add semantic html notes

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,3 +62,8 @@ footer p {
   .italic {
     font-style: italic;
   }
+
+  #standard-head {
+    border-width: 1px; 
+    border-color: black;
+  }
