--- a/assets/style.css
+++ b/assets/style.css
@@ -1,85 +1,71 @@
-* {
-    margin: 0;  
-    padding: 0;
-}
-
-header,
-footer {
-    width: 100%;
-    height: 120px;
-    background-color: blue;
-    color: white;
-}
-
-h1,
-h2 {
+  * {
+      margin: 0;  
+      padding: 0;
+  }
+  
+  header, 
+  footer {
+      width: 100%;
+      height: 120px;
+      background-color: blue;
+      color: white;
+      overflow: hidden;
+  }
+  
+  h1,
+   h2 {
+      text-align: center;
+  }
+  
+  
+  ul, 
+  ol, 
+  p {
+      padding-left: 40px;
+      font-size: 20px;
+  }
+  
+  footer p {
     text-align: center;
-}
-
-img {
-    display: block;
-    height: 50px;
-    width: 50px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-ul, ol, p {
-    padding-left: 40px;
-    font-size: 20px;
-}
-
-footer p {
-  text-align: center;
-  font-size: 30px;
-}
-
-
-  .card {
-    width: 80%;
-    margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888;
-    background-color: white;
-    color: black;
-    display: inline-block;
+    font-size: 30px;
   }
+  
+    .description {
+      color: hsl(240, 80%, 60% );
+      font-style: italic;
+    }
+  
+    .example {
+      color: hsl(240, 0%, 50% );
+    }
+  
+    .italic {
+      font-style: italic;
+    }
 
-  .card a {
-    color: hsl(240, 100%, 50% );
-    text-decoration: none;
-  }
+    .card {
+      margin: 5px auto;
+      border: 5px solid gray;
+      box-shadow: 5px 10px #888;
+      background-color: white;
+      color: black;
+      display: inline-block;
+      width: 80%;
+    }
 
-  .card a:hover {
-    color: black;
-  }
+    .nav-link {
+      
+    }
 
-  .description {
-    color: hsl(240, 80%, 60% );
-    font-style: italic;
-  }
+    #home-link {
+      margin: 5px auto;
+      font-weight: bold;
+      font-size: x-large;
+      color: white; 
+      text-decoration: none;
+      width: 20%;
+    }
 
-  .example {
-    color: hsl(240, 0%, 50% );
-  }
+    #nav-divider-home {
 
-  .italic {
-    font-style: italic;
-  }
-
-  #standard-head {
-    border-width: 1px; 
-    border-color: black;
-  }
-
-  #top {
-    position: sticky;
-    top: 0;
-  }
-
-  #home {
-    display: inline-block;
-    font-weight: bold;
-    font-size: x-large;
-    color: black;
-  }
+    }
